# ride-puck

./: .gitignore  README.md
docs/: architecture.md  ble-protocol.md  phone-testing.md  setup.md
firmware/ridepuck_display/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/ridepuck_display/main/: CMakeLists.txt  Kconfig.projbuild  ble_server.c  ble_server.h  board_config.h  dashboard_state.c  display_driver.c  display_driver.h  idf_component.yml  main.c  mock_data.c  mock_data.h
firmware/ridepuck_display/main/ui/: ui_manager.c  ui_manager.h  ui_theme.h
firmware/ridepuck_display/main/ui/screens/: screen_error.c  screen_error.h  screen_no_route.c  screen_no_route.h  screen_ride.c  screen_ride.h  screen_waiting.c  screen_waiting.h
firmware/scoutos_display/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/scoutos_display/main/: ble_server.c  ble_server.h  dashboard_state.h  main.c
mobile/ridepuck_app/: .env.example  .gitignore  README.md  pubspec.yaml
mobile/ridepuck_app/android/: gradle.properties
mobile/ridepuck_app/android/app/: build.gradle.kts
mobile/ridepuck_app/lib/: app.dart  main.dart
mobile/ridepuck_app/linux/: CMakeLists.txt
mobile/ridepuck_app/test/: dashboard_state_test.dart  gps_service_test.dart  widget_test.dart
mobile/ridepuck_app/web/: index.html  manifest.json
mobile/ridepuck_app/windows/: CMakeLists.txt
mobile/scoutos_app/: README.md  pubspec.yaml
mobile/scoutos_app/lib/: app.dart  main.dart
mobile/scoutos_app/test/: dashboard_state_test.dart
shared/: dashboard-state.schema.json
(+23 files in other folders)
